[SYNCOPE-1427] Besides JDK 11, also switched to CXF 3.3.0-SNAPSHOT and OpenJPA 3.0.1-SNAPSHOT