@@ -50,7 +50,7 @@ public final class SearchCondConverter {
             if (realms != null && realms.length > 0) {
                 visitor.setRealm(realms[0]);
             }
-            SearchCondition<SearchBean> sc = parser.parse(URLDecoder.decode(fiql, StandardCharsets.UTF_8.name()));
+            SearchCondition<SearchBean> sc = parser.parse(URLDecoder.decode(fiql, StandardCharsets.UTF_8));
             sc.accept(visitor);
 
             return visitor.getQuery();
