@@ -18,7 +18,6 @@
  */
 package org.apache.syncope.core.persistence.api.search;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -80,21 +79,17 @@ public class SearchCondVisitor extends AbstractSearchConditionVisitor<SearchBean
         String name = getRealPropertyName(sc.getStatement().getProperty());
         Optional<SpecialAttr> specialAttrName = SpecialAttr.fromString(name);
 
-        String value = null;
-        try {
-            value = SearchUtils.toSqlWildcardString(
-                    URLDecoder.decode(sc.getStatement().getValue().toString(), StandardCharsets.UTF_8.name()), false).
-                    replaceAll("\\\\_", "_");
+        String value = SearchUtils.toSqlWildcardString(
+                URLDecoder.decode(sc.getStatement().getValue().toString(), StandardCharsets.UTF_8), false).
+                replaceAll("\\\\_", "_");
 
-            // see SYNCOPE-1321
-            if (TIMEZONE.matcher(value).matches()) {
-                char[] valueAsArray = value.toCharArray();
-                valueAsArray[valueAsArray.length - 5] = '+';
-                value = new String(valueAsArray);
-            }
-        } catch (UnsupportedEncodingException e) {
-            throw new IllegalArgumentException("While decoding " + sc.getStatement().getValue(), e);
+        // see SYNCOPE-1321
+        if (TIMEZONE.matcher(value).matches()) {
+            char[] valueAsArray = value.toCharArray();
+            valueAsArray[valueAsArray.length - 5] = '+';
+            value = new String(valueAsArray);
         }
+
         Optional<SpecialAttr> specialAttrValue = SpecialAttr.fromString(value);
 
         AttributeCond attributeCond = createAttributeCond(name);
