@@ -197,7 +197,7 @@ public class SAML2ReaderWriter {
         String requestToSign =
                 SSOConstants.SAML_REQUEST + "=" + request + "&"
                 + SSOConstants.RELAY_STATE + "=" + relayState + "&"
-                + SSOConstants.SIG_ALG + "=" + URLEncoder.encode(sigAlgo, StandardCharsets.UTF_8.name());
+                + SSOConstants.SIG_ALG + "=" + URLEncoder.encode(sigAlgo, StandardCharsets.UTF_8);
         signature.update(requestToSign.getBytes(StandardCharsets.UTF_8));
         return Base64.getEncoder().encodeToString(signature.sign());
     }
